外部CSSの読み込みをコメントアウト

--- a/Markdown_Preview.html
+++ b/Markdown_Preview.html
@@ -8,7 +8,7 @@
   <script>
     mermaid.initialize({ startOnLoad: false }); // Mermaid手動初期化
   </script>
-  <link rel="stylesheet" href="https://star-delta.github.io/CSS/Markdown.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <style>
     body {
       font-family: sans-serif;
