infoボタンの配置を変更

--- a/Markdown_Preview.html
+++ b/Markdown_Preview.html
@@ -25,7 +25,7 @@
       cursor: pointer;
     }
     #info-button {
-      position: fixed;
+      position: absolute;
       top: 0.2em;
       right: 0.2em;
       z-index: 1001;
